Stop uploads nav subsection layout problem at smaller screen sizes

--- a/kahuna/public/js/components/gr-top-bar/gr-top-bar.css
+++ b/kahuna/public/js/components/gr-top-bar/gr-top-bar.css
@@ -16,6 +16,7 @@ gr-top-bar-actions {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    min-width: 278px;
 }
 
 
