--- a/kahuna/public/stylesheets/main.css
+++ b/kahuna/public/stylesheets/main.css
@@ -778,6 +778,10 @@ textarea.ng-invalid {
         min-width: inherit;
     }
 
+    gr-top-bar-actions {
+      min-width: 128px;
+    }
+
     .results-toolbar-item .gr-confirm-delete gr-icon-label {
         padding: 0
     }
